--- a/html/index.html
+++ b/html/index.html
@@ -121,21 +121,27 @@
                                    <div class="goal">
                                         <h3>Teaching</h3>
                                         <p>Improve the education of autistic children and young people.</p>  
-                                        <div class="read-button"><a href="curriculum.html" style="color: white;">Read more</a></div>
+                                        <div class="read-button">
+                                             <a href="curriculum.html" style="color: white;">Read more</a>
+                                        </div>
                                    </div>
                               </td>
                               <td>
                                    <div class="goal">
                                         <h3>Socializing</h3>
                                         <p>Enable individuals to reach their potential and engage in society.</p>  
-                                        <div class="read-button"><a href="curriculum.html" style="color: white;">Read more</a></div>
+                                        <div class="read-button">
+                                             <a href="curriculum.html" style="color: white;">Read more</a>
+                                        </div>
                                    </div>
                               </td>
                               <td>
                                    <div class="goal">
                                         <h3>Support</h3>
                                         <p>Support and inform education professionals.</p>  
-                                        <div class="read-button"><a href="curriculum.html" style="color: white;">Read more</a></div>
+                                        <div class="read-button">
+                                             <a href="curriculum.html" style="color: white;">Read more</a>
+                                        </div>
                                    </div>
                               </td>
                          </tr>
@@ -144,21 +150,27 @@
                                    <div class="goal">
                                         <h3>Behaviour</h3>
                                         <p>Embedding positive attitudes towards neurodiversity.</p>  
-                                        <div class="read-button"><a href="curriculum.html" style="color: white;">Read more</a></div>
+                                        <div class="read-button">
+                                             <a href="curriculum.html" style="color: white;">Read more</a>
+                                        </div>
                                    </div>
                               </td>
                               <td>
                                    <div class="goal">
                                         <h3>Comunication</h3>
                                         <p>Increasing social communication skills.</p>  
-                                        <div class="read-button"><a href="curriculum.html" style="color: white;">Read more</a></div>
+                                        <div class="read-button">
+                                             <a href="curriculum.html" style="color: white;">Read more</a>
+                                        </div>
                                    </div>
                               </td>
                               <td>
                                    <div class="goal">
                                         <h3>Happiness</h3>
                                         <p>Achieving to put a smile on the faces of these children warms our hearts.</p>  
-                                        <div class="read-button"><a href="curriculum.html" style="color: white;" >Read more</a></div>
+                                        <div class="read-button">
+                                             <a href="curriculum.html" style="color: white;" >Read more</a>
+                                        </div>
                                    </div>
                               </td>
                          </tr>
@@ -166,6 +178,7 @@
              </div>
          </section>
          
+         <hr>
          <footer id="footer">
               <!--jscode-->
          </footer>
