--- a/html/parents.html
+++ b/html/parents.html
@@ -65,43 +65,42 @@
                          to have their special needs."
                     </p>
                     <p align="right"> - Bruno West</p>
+                    </div>
+                    <div class="box">
+                         <p>
+                         " Words can't express how overjoyed I am with having my child in Helios! After all the research I 
+                         did prior to putting him in the school, it felt as if it were too good to be true! But it's not!
+                         Everyday he goes to school in Helios is a blessing. this school has filled our hearts with hope!
+                         you will find that everyone in Helios is ther because it's their passion in wanting to make a 
+                         difference! And they have, in our lives! I will be firever greatfull for this gem of a school. "  
+                         </p>
+                         <p align="right"> - Elizabeth Potts</p>
+                    </div>
+                    <div class="box">
+                         <p>
+                              " When my son has been diagnosed with autism over a year ago i had no idea what to expect or 
+                              what to do because autism was something I read about and heard about but never truly understood.
+                              And when it came to my son I wanted the best school, the best teachers and the best therapists
+                              to help him reach his highest potential - that's when I began my research. I went to visit schools 
+                              and none of them really made an impact on me, they were over crowded and I didn't feel a personal
+                              connection in any of them. Then I found Helios and right away I emailed them and asked a million 
+                              questions and Mrs.***** always replied! We set up a tour of the school and I was shown around and 
+                              when I met the principal I knew I had found the right place for my son. When she spoke to me about 
+                              the school I felt her passion behind all her words and I automatically signed him up! Words cannot 
+                              explain how grateful I am thatmy son continues to suprise me every single day and I honestly owe it
+                              to this school & its amazing staff & the amazing curriculum that engages all the children in the way
+                              that is best for them. "
+                         </p> 
+                         <p align="right"> - Charlie Jacobs</p>
+                    </div>
                </div>
-               <div class="box">
-                    <p>
-                       " Words can't express how overjoyed I am with having my child in Helios! After all the research I 
-                       did prior to putting him in the school, it felt as if it were too good to be true! But it's not!
-                       Everyday he goes to school in Helios is a blessing. this school has filled our hearts with hope!
-                       you will find that everyone in Helios is ther because it's their passion in wanting to make a 
-                       difference! And they have, in our lives! I will be firever greatfull for this gem of a school. "  
-                    </p>
-                    <p align="right"> - Elizabeth Potts</p>
-               </div>
-               <div class="box">
-                    <p>
-                         " When my son has been diagnosed with autism over a year ago i had no idea what to expect or 
-                         what to do because autism was something I read about and heard about but never truly understood.
-                         And when it came to my son I wanted the best school, the best teachers and the best therapists
-                         to help him reach his highest potential - that's when I began my research. I went to visit schools 
-                         and none of them really made an impact on me, they were over crowded and I didn't feel a personal
-                         connection in any of them. Then I found Helios and right away I emailed them and asked a million 
-                         questions and Mrs.***** always replied! We set up a tour of the school and I was shown around and 
-                         when I met the principal I knew I had found the right place for my son. When she spoke to me about 
-                         the school I felt her passion behind all her words and I automatically signed him up! Words cannot 
-                         explain how grateful I am thatmy son continues to suprise me every single day and I honestly owe it
-                         to this school & its amazing staff & the amazing curriculum that engages all the children in the way
-                         that is best for them. "
-                    </p> 
-                    <p align="right"> - Charlie Jacobs</p>
-               </div>
-             </div>
+          </div>
+          <img src="../images/parent.jpg" class="parent-pic">
+          <div style="height:300px">
+               <p class="text">It's our priority to make your child feel warm </p>
+          </div>
 
-        </div>
-        <img src="../images/parent.jpg" class="parent-pic">
-        <div style="height:300px"><p class="text">It's our priority to make your child feel warm </p></div>
-
-
-
-
+          <hr>
 
          <footer id="footer">
               <!--jscode-->
