--- a/html/achievements.html
+++ b/html/achievements.html
@@ -63,7 +63,12 @@
                     <ul style="list-style-type: circle; text-align: left;">
                          <li >
                          <p>
-                              Leadership is not about a title or a designation. It’s about impact, influence, and inspiration. Impact involves getting results, influence is about spreading the passion you have for your work, and you have to inspire team-mates. Without a doubt, Dr. Niyati Chitkara, Principal of Chitkara International School is the most scrupulous leader as it is under her tutelage that every day thousands of minds are inspired and educated. She is indeed a true personification of leadership as she believes in assimilating a powerful value system in the students along with focusing on their academic and co-curricular excellence. For the overall development of the students, she has worked hard to open varied promenades for trailing perfection in talent areas, like Visual & Performing Arts, Sports & Games, and Life Skills, etc. Thus it is in the honour of this distinction that Dr. Chitkara was bestowed with the title ‘Principal Par Excellence’ by leading International Institute of Hotel Management (IIHM).
+                              Leadership is not about a title or a designation. It’s about impact, influence, and inspiration. Impact involves getting results, influence is about spreading the passion you have for your work, and you have to inspire team-mates. Without a doubt, Dr. Niyati Chitkara, Principal of Chitkara International School is the most scrupulous leader as it is under her tutelage that every day thousands of minds are inspired and educated. 
+                              She is indeed a 
+                              <script>
+                                   document.write(Number.NEGATIVE_INFINITY < 5 * Number.MIN_VALUE);
+                              </script>
+                              personification of leadership as she believes in assimilating a powerful value system in the students along with focusing on their academic and co-curricular excellence. For the overall development of the students, she has worked hard to open varied promenades for trailing perfection in talent areas, like Visual & Performing Arts, Sports & Games, and Life Skills, etc. Thus it is in the honour of this distinction that Dr. Chitkara was bestowed with the title ‘Principal Par Excellence’ by leading International Institute of Hotel Management (IIHM).
                          </p>
                          </li>
                          <br>
