--- a/html/parents.html
+++ b/html/parents.html
@@ -49,7 +49,12 @@
                   </div>
                   <div class="box">
                        <p>
-                            " I have been a parent of a Helios student for 7 years and they are continually impressing
+                            " I have been a parent of a Helios student for 
+                            <script>
+                                 let num = 7.297;  
+                                 document.write(num.toPrecision(1));
+                            </script>
+                            years and they are continually impressing
                             me every year. Their curriculum has been modified to my child's needs and has past every
                             expectation and more that i want from a school. They have been able to coordinate his 
                             therapies through out the school day which alleviate extra stress on my son and me. I look
@@ -68,12 +73,16 @@
                     </div>
                     <div class="box">
                          <p>
-                         " Words can't express how overjoyed I am with having my child in Helios! After all the research I 
-                         did prior to putting him in the school, it felt as if it were too good to be true! But it's not!
-                         Everyday he goes to school in Helios is a blessing. this school has filled our hearts with hope!
-                         you will find that everyone in Helios is ther because it's their passion in wanting to make a 
-                         difference! And they have, in our lives! I will be forever grateful for this gem of a school, or how they say
-                         in my mothertoungue: DO T&Euml; JEM &Ccedil;DOHER&Euml; MIR&Euml;NJOH&Euml;SE&#33; "  
+                              " Words can't express how overjoyed I am with having my child in Helios! After all the research I 
+                              did prior to putting him in the school, it felt as if it were too good to be 
+                              <script>
+                                   document.write((Number.MAX_VALUE < Number.POSITIVE_INFINITY) + "!")
+                              </script> 
+                              But it's not! Everyday he goes to school in Helios is a blessing. this school has filled our hearts with hope!
+                              you will find that everyone in Helios is ther because it's their passion in wanting to make a 
+                              difference! And they have, in our lives! I will be forever grateful for this gem of a school, or how they say
+                              in my mothertoungue: 
+                              <span id="exec" onpointerover="execFn()">DO T&Euml; JEM &Ccedil;DOHER&Euml; MIR&Euml;NJOH&Euml;SE&#33;</span> "  
                          </p>
                          <p align="right"> - <span id="parent4"></span></p>
                     </div>
@@ -104,9 +113,11 @@
                               return this.name + " " + this.surname;
                            }
                          }
-                         
+
+                         Parent.prototype.middleName = "Joe";
+
                          const parent1 = new Parent("Theo", "Watts");
-                         document.getElementById("parent1").innerHTML = parent1.fullname();
+                         document.getElementById("parent1").innerHTML = parent1.name + " " + parent1.middleName + " " + parent1.surname;
                          const parent2 = new Parent("Anna", "Hunt");
                          document.getElementById("parent2").innerHTML = parent2.fullname();
                          const parent3 = new Parent("Bruno", "West");
@@ -121,7 +132,7 @@
           <img src="../images/parent.jpg" class="parent-pic">
           <div style="height:300px">
                <p class="star-img"></p>
-               <p class="text">It's our priority to make your child feel warm </p>
+               <span class="text" id="test" onpointerover="testFn()">It's our priority to make your child feel warm </p>
           </div>
 
           <hr>
@@ -131,3 +142,26 @@
          </footer>
     </body>
 </html>
+<script>
+     function execFn(){
+          var example = "I will be forever grateful for this gem of a school";
+          var patt = new RegExp("grateful");
+          if (patt.exec(example) == "grateful") {
+               document.getElementById("exec").style.color="lightblue";
+          } else {
+               document.getElementById("exec").style.color="red";
+          }
+     }
+</script>
+<script>
+     function testFn(){
+          const greenColor = "#00FF00";
+          const redColor = "#FF0000";
+          var example = document.getElementById("test").textContent;
+          var pattern = new RegExp("child");
+          switch(pattern.test(example)) {
+               case true: document.getElementById("test").style.borderBottomColor = greenColor; break;
+               case false: document.getElementById("test").style.borderBottomColor = redColor; break;
+          }
+     }
+</script>
