--- a/html/contact.html
+++ b/html/contact.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1">
         <link rel="icon" href="../images/autism.png"/>
         <script src="../js/header_footer.js"></script>
+        <script src="../js/validators.js"></script>
         <link rel="stylesheet" href="../css/style.css" type="text/css" media="all">
         <link rel="stylesheet" href="../css/contact-page-style.css" type="text/css" media="all">
         <script src="https://kit.fontawesome.com/ecebb8f563.js" crossorigin="anonymous"></script>
@@ -73,16 +74,16 @@
                         name="EmailForm">
                         <h2>Send Message</h2>
                         <div class="inputBox">
-                            <input type="text" name="" required="required">
+                            <input id="fullName" type="text" name="" required="required" onchange="validateFullName()">
                             <span class="Instructions">Full Name</span>
                         </div>
                         <div class="inputBox">
-                            <input type="text" name="" required="required">
+                            <input id="email" type="email" name="" required="required" onchange="validateEmail()">
                             <span class="Instructions">Email</span>
                         </div>
                         <div class="inputBox">
                             <textarea required="required"></textarea>
-                            <span class="Instructions">Type you message</span>
+                            <span class="Instructions">Type your message</span>
                         </div>
                         <div class="inputBox">
                             <input type="submit" name="" value="Send" onclick="proceedAlert()">
