--- a/html/about.html
+++ b/html/about.html
@@ -92,22 +92,29 @@
                                         <br>
                                         Out school is ranked with 
                                         <script>
-                                             let num = 50.5;
+                                             let num = Math.abs(-50.5);
                                              let n = num.toExponential();
                                              document.write(n.toString());
                                         </script>
                                         points according to their performance across a set of widely accepted indicators of excellence (overall score is 
                                         <script>
-                                             let num = 150.578;
-                                             let n = num.toFixed();
-                                             document.write(n.toString());
+                                             let number = (Math.LOG2E + Math.E + Math.pow(Math.LN10, 3) - (Math.sqrt(100) / Math.PI)) * 10;
+                                             let nr = number.toFixed();
+                                             document.write(nr.toString() + ").");
                                         </script>
-                                        ).
                                    </p>
-                                   <ul id="square-ul">
-                                        <li>Meet IDEA requirements and address state standards and the Common Core</li>
-                                        <li>Monitor student progress and aggregate results across classes, schools, and therapies</li>
-                                   </ul>
+                                   <script>
+                                        var duties, list;
+                                        duties = new Array("Meet IDEA requirements and address state standards and the Common Core", 
+                                             "Monitor student progress and aggregate results across classes, schools, and therapies");
+                        
+                                        list = "<ul id='square-ul'>";
+                                        for (var i = 0; i < duties.length; i++) {
+                                            list += "<li>" + duties[i] + "</li>";
+                                        }
+                                        list += "</ul>";
+                                        document.write(list);
+                                   </script>
                               </div>
                          </div>
                     </section>
