--- a/html/parents.html
+++ b/html/parents.html
@@ -128,13 +128,33 @@
                     </script>
                </div>
           </div>
+          <figure>
           <img src="../images/parent.jpg" class="parent-pic">
+<figcaption><h5>Helios thinks about your well being</h5></figcaption>
+          
           <div style="height:300px">
                <p class="star-img"></p>
                <span class="text" id="test" onpointerover="testFn()">It's our priority to make your child feel warm </p>
           </div>
+          </figure>
 
           <hr>
+
+          <article class="photos">
+               <h1>Happy parents</h1>
+               <article class="happyparent1">
+                   <h2>Suzana Shala</h2>
+                   <p>The best decision I ever did was bringing my child in this school</p>
+               </article>
+               <article class="happyparent1">
+                   <h2>Aferdita Jupolli</h2>
+                   <p>My child behavior has changed a lot since she is part of this school</p>
+               </article>
+               <article class="happyparent1">
+                   <h2>Drita Ferati</h2>
+                   <p>Helios school has made my life easier. Seeing my child happy after school makes my day better.</p>
+               </article>
+           </article>
 
          <footer id="footer">
               <!--jscode-->
@@ -165,3 +185,4 @@
           }
      }
 </script>
+
