Completed some tasks

--- a/html/apply.html
+++ b/html/apply.html
@@ -83,7 +83,7 @@
                             <span id="video">View video</span>
                         </a>
                         <div class="inputBox">
-                            <input id="fullName" type="text" name="" required="required" onchange="validateFullName()">
+                            <input id="fullName" type="text" name="" required="required" onchange="validateFullName()" autofocus>
                             <span class="Instructions">Full Name</span>
                         </div>
                         <div class="inputBox">
@@ -95,7 +95,7 @@
                             <span class="Instructions">Email</span>
                         </div>
                         <div class="inputBox">
-                            <input id="phone" type="tel" name="" required="required" onchange="validatePhoneNum()">
+                            <input id="phone" type="tel" name="" required="required" onchange="validatePhoneNum()" multiple>
                             <span class="Instructions">Phone Number</span>
                         </div>
                         <div class="inputBox">
