--- a/html/achievements.html
+++ b/html/achievements.html
@@ -176,8 +176,12 @@
                     </p>
                </div>
           </div>
-          </div>
-          <hr>
+          </div >
+         
+          <h2>We are happy, when our students are happy</h2>
+<div class="b">Lorem ipsum dolor, sit ametconsecteturadipisicingelit. Beatae inventore fugit quisquam itaque sed qui voluptas aut soluta corporis tenetur! Iure itaque repellendus totam voluptatem quae aspernatur ipsum ducimus magni.</div>
+       
+<hr>
           <footer id="footer">
                <!--jscode-->
           </footer>
