--- a/html/index.html
+++ b/html/index.html
@@ -193,6 +193,22 @@
                     </table>
              </div>
          </section>
+         <div class="autisticpeople">
+              <h4 style="color: rgb(254, 228, 100); text-align: center;">We see geometric objects, autistic people see art</h4>
+          <svg width="400" height="110">
+               <rect width="300" height="100" style="fill:rgb(236, 233, 39);stroke-width:3;stroke:rgb(169, 150, 214)" />
+             </svg>
+             <svg height="110" width="110">
+               <circle cx="60" cy="60" r="40" stroke="black" stroke-width="3" fill="red" />
+             </svg>
+             <svg height="150" width="350">
+               <polygon points="180,10 230,140 140,110" style="fill:lime;stroke:purple;stroke-width:1" />
+             </svg>
+             <svg height="140" width="300">
+               <ellipse cx="200" cy="80" rx="100" ry="50"
+               style="fill:yellow;stroke:purple;stroke-width:2" />
+             </svg>
+         </div>
          
          <hr>
         
