--- a/html/achievements.html
+++ b/html/achievements.html
@@ -180,7 +180,14 @@
          
           <h2>We are happy, when our students are happy</h2>
 <div class="b">Lorem ipsum dolor, sit ametconsecteturadipisicingelit. Beatae inventore fugit quisquam itaque sed qui voluptas aut soluta corporis tenetur! Iure itaque repellendus totam voluptatem quae aspernatur ipsum ducimus magni.</div>
-       
+<br><br><div class="vision3" style="background-color: silver; padding: 5px; border-radius: 2px; width: 700px; margin-left: 25%;">Our vision is a world where all autistic children and young people experience a positive education that supports wellbeing.
+ The primary mission of Helios is to provide individualized research verified education services to children with autism.
+     It is our commitment to provide outstanding academic, vocational, and functional life programs.Our vision is a world where all autistic children and young people experience a positive education that supports wellbeing.
+     The primary mission of Helios is to provide individualized research verified education services to children with autism.
+         It is our commitment to provide outstanding academic, vocational, and functional life programs.Our vision is a world where all autistic children and young people experience a positive education that supports wellbeing.
+         The primary mission of Helios is to provide individualized research verified education services to children with autism.
+             It is our commitment to provide outstanding academic, vocational, and functional life programs.</div>
+</p>
 <hr>
           <footer id="footer">
                <!--jscode-->
